# jellyfin-rpc

./: .gitignore  Auto-Install-win.bat  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  FAQ.md  README.md  docker-compose.yml  example.env  example.json  install
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: build.yml  publish.yml  release.yml  rust.yml
jellyfin-rpc/: Cargo.toml  README.md  example.json
jellyfin-rpc-cli/: Cargo.toml  README.md
jellyfin-rpc-cli/src/: config.rs  main.rs  updates.rs
jellyfin-rpc/src/: error.rs  jellyfin.rs  lib.rs  prelude.rs  tests.rs
jellyfin-rpc/src/core/: config.rs  error.rs  mod.rs  rpc.rs
jellyfin-rpc/src/services/: imgur.rs  jellyfin.rs  mod.rs
scripts/: Auto-Install-win.bat  Auto-install-macos.sh  install  install-linux.sh  install-macos.sh  install-win.bat  installer  installer.py  jellyfin-rpc.service  uninstall-macos.sh  uninstall-win.bat  uninstall.py  uninstaller.py
src/: config.rs  error.rs  jellyfin.rs  main.rs
src/core/: config.rs  mod.rs  updates.rs
src/services/: imgur.rs  jellyfin.rs  mod.rs
