[package]
name         = "jellyfin-rpc"
version      = "0.15.2"
edition      = "2021"
description  = "Displays the content you're currently watching on Discord!"
license-file = "LICENSE"
repository   = "https://github.com/jellyfin/jellyfin-rpc"

exclude = [
    "scripts/*",
    ".github/*"
]


[dependencies]
serde_json            = "1.0"
discord-rich-presence = "0.2"
colored               = "2.0"
retry                 = "2.0"

[dependencies.serde]
features = ["derive"]
version  = "1.0"

[dependencies.clap]
features = ["derive"]
version  = "4.1"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json"]
version  = "0.11"

[dependencies.tokio]
features = ["full"]
version  = "1"
