[package]
name         = "jellyfin-rpc-cli"
version      = "1.3.3"
edition      = "2021"
description  = "Displays the content you're currently watching on Discord!"
license      = "GPL-3.0-or-later"
repository   = "https://github.com/Radiicall/jellyfin-rpc"
keywords     = ["cli", "jellyfin", "discord", "rich-presence"]

exclude = [
    "scripts/*",
    ".github/*"
]

[[bin]]
name = "jellyfin-rpc"
path = "src/main.rs"

[features]
default = ["updates"]
updates = ["dep:reqwest"]

[dependencies]
colored               = "2.1"
retry                 = "2.0"
log                   = "0.4"
simple_logger         = "5.0"
time                  = "0.3"
serde_json            = "1.0"

[dependencies.jellyfin-rpc]
path = "../jellyfin-rpc"
#version = "1.3.3"

[dependencies.clap]
features = ["derive"]
version  = "4.5"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json", "blocking"]
version  = "0.12"
optional = true

[dependencies.serde]
features = ["derive"]
version  = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
