[package]
name        = "jellyfin-rpc"
version     = "0.1.3"
edition     = "2021"
description = "Backend for the Jellyfin-RPC-cli and Jellyfin-RPC-Iced projects"
license     = "GPL-3.0-or-later"
repository  = "https://github.com/Radiicall/jellyfin-rpc"

[features]
imgur = []
cli   = ["dep:colored"]

[dependencies]
discord-rich-presence = "0.2"
retry                 = "2.0"
serde_json            = "1.0"
async-recursion       = "1.0.5"
tokio                 = "1"

[dependencies.colored]
version  = "2.0"
optional = true

[dependencies.serde]
features = ["derive"]
version  = "1.0"

[dependencies.reqwest]
default-features = false
features         = ["rustls-tls", "json"]
version          = "0.11"
