[package]
name        = "jellyfin-rpc"
version     = "1.2.1"
edition     = "2021"
description = "Backend for the Jellyfin-RPC-cli and Jellyfin-RPC-Iced projects"
license     = "GPL-3.0-or-later"
repository  = "https://github.com/Radiicall/jellyfin-rpc"
keywords     = ["jellyfin", "discord", "rich-presence"]

[dependencies]
discord-rich-presence = { git = "https://github.com/Radiicall/discord-rich-presence" }
serde_json            = "1.0"
log                   = "0.4"
url                   = "2.5"

[dependencies.serde]
features = ["derive"]
version  = "1.0"

[dependencies.reqwest]
default-features = false
features         = ["rustls-tls", "json", "blocking"]
version          = "0.12"
